--- a/frontend/login.html
+++ b/frontend/login.html
@@ -105,19 +105,26 @@
 
                     // === PENTING: Arahkan pengguna berdasarkan role ===
                     // Anda bisa menambahkan logika pengalihan di sini
-                    if (userRole === '0') {
-                        window.location.href = 'index.html';
-                    } else if (userRole === 'dokter') {
-                        window.location.href = 'dokter_dashboard.html';
-                    } else if (userRole === 'pasien') {
-                        window.location.href = 'pasien_dashboard.html';
-                    } else if (userRole === 'perawat') {
-                        window.location.href = 'perawat_dashboard.html';
-                    } else if (userRole === 'apoteker') {
-                        window.location.href = 'apoteker_dashboard.html';                    
+                    // Pastikan userRole bertipe string untuk perbandingan yang konsisten
+                    const roleStr = String(userRole);
+                    if (roleStr === '1') {
+                        window.location.href = 'index.html'; // Admin
+                    } else if (roleStr === '2') {
+                        window.location.href = 'pendaftaran.html'; // Admin pendaftaran
+                    } else if (roleStr === '3') {
+                        window.location.href = 'https://ti054a02.agussbn.my.id'; // Dokter
+                    } else if (roleStr === '4') {
+                        window.location.href = 'https://ti054a03.agussbn.my.id'; // Perawat
+                    } else if (roleStr === '5') {
+                        window.location.href = 'kasir.html'; // Petugas Kasir
+                    } else if (roleStr === '6') {
+                        window.location.href = 'admin_kasir.html'; // Admin Kasir
+                    } else if (roleStr === '7') {
+                        window.location.href = 'apotik.html'; // Petugas Apotik
+                    } else if (roleStr === '8') {
+                        window.location.href = 'admin_apotik.html'; // Admin Apotik
                     } else {
-                        // Jika role tidak dikenali atau default
-                        window.location.href = 'index.html';
+                        showMessage('Role pengguna tidak dikenali. Silakan hubungi admin.', 'error');
                     }
 
                 } else {
