--- a/frontend/index-pasien_tambah.html
+++ b/frontend/index-pasien_tambah.html
@@ -177,32 +177,32 @@
                         <label for="kabupaten">Kabupaten</label>
                         <select id="kabupaten" name="kabupaten" required>
                             <option value="">-- Pilih Kabupaten --</option>
-                            <option value="1">Banjar</option>
-                            <option value="2">Barito Kuala</option>
-                            <option value="3">Tapin</option>
-                            <option value="4">Hulu Sungai Selatan</option>
-                            <option value="5">Hulu Sungai Tengah</option>
-                            <option value="6">Hulu Sungai Utara</option>
-                            <option value="7">Tabalong</option>
-                            <option value="8">Tanah Laut</option>
-                            <option value="9">Tanah Bumbu</option>
-                            <option value="10">Balangan</option>
-                            <option value="11">Kotabaru</option>
-                            <option value="12">Banjarmasin (Kota)</option>
-                            <option value="13">Banjarbaru (Kota)</option>
+                            <option value="Banjar">Banjar</option>
+                            <option value="Barito Kuala">Barito Kuala</option>
+                            <option value="Tapin">Tapin</option>
+                            <option value="Hulu Sungai Selatan">Hulu Sungai Selatan</option>
+                            <option value="Hulu Sungai Tengah">Hulu Sungai Tengah</option>
+                            <option value="Hulu Sungai Utara">Hulu Sungai Utara</option>
+                            <option value="Tabalong">Tabalong</option>
+                            <option value="Tanah Laut">Tanah Laut</option>
+                            <option value="Tanah Bumbu">Tanah Bumbu</option>
+                            <option value="Balangan">Balangan</option>
+                            <option value="Kotabaru">Kotabaru</option>
+                            <option value="Banjarmasin (Kota)">Banjarmasin (Kota)</option>
+                            <option value="Banjarbaru (Kota)">Banjarbaru (Kota)</option>
                         </select>
                     </div>                    
                     <div class="form-group">
                         <label for="agama">Agama</label>
                         <select id="agama" name="agama" required>
                             <option value="">-- Pilih --</option>
-                            <option value="1">Islam</option>
-                            <option value="2">Kristen</option>
-                            <option value="3">Katolik</option>
-                            <option value="4">Hindu</option>
-                            <option value="5">Buddha</option>
-                            <option value="6">Konghucu</option>
-                            <option value="7">Lainnya</option>
+                            <option value="Islam">Islam</option>
+                            <option value="Kristen">Kristen</option>
+                            <option value="Katolik">Katolik</option>
+                            <option value="Hindu">Hindu</option>
+                            <option value="Buddha">Buddha</option>
+                            <option value="Konghucu">Konghucu</option>
+                            <option value="Lainnya">Lainnya</option>
                         </select>
                     </div>                    
                     <div class="form-group">
