--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
             color: #666;
             font-style: italic;
         }
+
         .error-text {
             color: red;
             font-weight: bold;
@@ -99,7 +100,9 @@
                 <div class="popup-content">
                     <img src="image/admin.svg" alt="User" class="popup-icon">
                     <div>
-                        <div class="popup-name" id="userNameDisplay">Memuat...</div> <div class="popup-role" id="userRoleDisplay">Memuat...</div> </div>
+                        <div class="popup-name" id="userNameDisplay">Memuat...</div>
+                        <div class="popup-role" id="userRoleDisplay">Memuat...</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -107,7 +110,8 @@
     <main>
         <div class="main-content">
             <h3>Beranda</h3>
-            <h4 id="welcomeMessage">Selamat Datang!</h4> </div>
+            <h4 id="welcomeMessage">Selamat Datang!</h4>
+        </div>
         <div class="cards">
             <div class="card">
                 <div class="box">
@@ -123,48 +127,75 @@
             </div>
         </div>
         <div class="cards-2">
-            <div class="card-2">
-                <div class="icon-case">
-                    <img src="image/icon-total-kunjungan.png" alt="icon-total-kunjungan">
+            <!-- Baris pertama -->
+            <div class="top-cards">
+                <div class="card-2">
+                    <!-- Pendaftaran -->
+                    <div class="icon-case">
+                        <img src="image/icon-total-kunjungan.png" alt="icon-total-kunjungan">
+                    </div>
+                    <div class="box-2">
+                        <h4>Pendaftaran</h4>
+                        <h4 class="jumlah" id="pendaftaranCount">0</h4>
+                    </div>
+                    <div class="arrow">
+                        <a href="index-pendaftaran.html"><img src="image/arrow-right.svg" alt=""></a>
+                    </div>
                 </div>
-                <div class="box-2">
-                    <h4>Pendaftaran</h4>
-                    <h4 class="jumlah" id="pendaftaranCount">0</h4> </div>
-                <div class="arrow">
-                    <a href="index-pendaftaran.html"><img src="image/arrow-right.svg" alt=""></a>
+                <div class="card-2">
+                    <!-- Pasien -->
+                    <div class="icon-case">
+                        <img src="image/icon-pasien.png" alt="icon-pasien">
+                    </div>
+                    <div class="box-2">
+                        <h4>Pasien</h4>
+                        <h4 class="jumlah" id="pasienCount">0</h4>
+                    </div>
+                    <div class="arrow">
+                        <a href="index-pasien.html"><img src="image/arrow-right.svg" alt=""></a>
+                    </div>
+                </div>
+                <div class="card-2">
+                    <!-- Poli -->
+                    <div class="icon-case">
+                        <img src="image/icon_poli.png" alt="icon_poli">
+                    </div>
+                    <div class="box-2">
+                        <h4>Poli</h4>
+                        <h4 class="jumlah" id="poliCount">0</h4>
+                    </div>
+                    <div class="arrow">
+                        <a href="index-layanan.html"><img src="image/arrow-right.svg" alt=""></a>
+                    </div>
                 </div>
             </div>
-            <div class="card-2">
-                <div class="icon-case">
-                    <img src="image/icon-pasien.png" alt="icon-pasien">
+            <!-- Baris kedua -->
+            <div class="bottom-cards">
+                <div class="card-2">
+                    <!-- Dokter -->
+                    <div class="icon-case">
+                        <img src="image/icon_dokter.png" alt="icon_dokter">
+                    </div>
+                    <div class="box-2">
+                        <h4>Dokter</h4>
+                        <h4 class="jumlah" id="dokterCount">0</h4>
+                    </div>
+                    <div class="arrow">
+                        <a href="index-layanan_dokter.html"><img src="image/arrow-right.svg" alt=""></a>
+                    </div>
                 </div>
-                <div class="box-2">
-                    <h4>Pasien</h4>
-                    <h4 class="jumlah" id="pasienCount">0</h4> </div>
-                <div class="arrow">
-                    <a href="index-pasien.html"><img src="image/arrow-right.svg" alt=""></a>
-                </div>
-            </div>
-            <div class="card-2">
-                <div class="icon-case">
-                    <img src="image/icon_poli.png" alt="icon_poli">
-                </div>
-                <div class="box-2">
-                    <h4>Poli</h4>
-                    <h4 class="jumlah" id="poliCount">0</h4> </div>
-                <div class="arrow">
-                    <a href="index-layanan.html"><img src="image/arrow-right.svg" alt=""></a>
-                </div>
-            </div>
-            <div class="card-2">
-                <div class="icon-case">
-                    <img src="image/icon_dokter.png" alt="icon_dokter">
-                </div>
-                <div class="box-2">
-                    <h4>Dokter</h4>
-                    <h4 class="jumlah" id="dokterCount">0</h4> </div>
-                <div class="arrow">
-                    <a href="index-layanan_dokter.html"><img src="image/arrow-right.svg" alt=""></a>
+                <div class="card-2">
+                    <!-- Perawat -->
+                    <div class="icon-case">
+                        <img src="image/icon_dokter.png" alt="icon_dokter">
+                    </div>
+                    <div class="box-2">
+                        <h4>Perawat</h4>
+                        <h4 class="jumlah" id="perawatCount">0</h4>
+                    </div>
+                    <div class="arrow">
+                        <a href="index-layanan_perawat.html"><img src="image/arrow-right.svg" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -240,6 +271,7 @@
             document.getElementById('pasienCount').textContent = 'Memuat...';
             document.getElementById('poliCount').textContent = 'Memuat...';
             document.getElementById('dokterCount').textContent = 'Memuat...';
+            document.getElementById('perawatCount').textContent = 'Memuat...';
 
             try {
                 const response = await fetch(`${BASE_API_URL}/dashboard/counts`, {
@@ -263,6 +295,7 @@
                 document.getElementById('pasienCount').textContent = data.pasien_count || 0;
                 document.getElementById('poliCount').textContent = data.poli_count || 0;
                 document.getElementById('dokterCount').textContent = data.dokter_count || 0;
+                document.getElementById('perawatCount').textContent = data.perawat_count || 0;
 
             } catch (error) {
                 console.error('Error mengambil data dashboard:', error);
@@ -271,6 +304,7 @@
                 document.getElementById('pasienCount').textContent = 'Error';
                 document.getElementById('poliCount').textContent = 'Error';
                 document.getElementById('dokterCount').textContent = 'Error';
+                document.getElementById('perawatCount').textContent = 'Error';
                 alert('Gagal memuat data dashboard: ' + error.message);
                 // Opsional: Redirect ke login jika token tidak valid/kadaluarsa
                 if (error.message.includes('Unauthenticated')) { // Sesuaikan pesan error dari Laravel
